# pybind11-example

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
demo/: CMakeLists.txt  example.cpp
include/: hello.h
python/: CMakeLists.txt  __init__.py  setup.py  wrapper.cpp
src/: CMakeLists.txt  hello.cpp
